# Wisteria

./: .gitignore  README.md  index.html  knip.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.cargo/: config.toml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  llm.rs  main.rs  state.rs  system.rs
src-tauri/src/db/: issues.rs  mod.rs  pr_history.rs  repos.rs  sessions.rs  settings.rs  tags.rs
src-tauri/src/git/: commands.rs  mod.rs
src-tauri/src/llm/: commands.rs  mod.rs
src/components/: DraftWorkspace.test.tsx  DraftWorkspace.tsx  IssueCard.tsx  ProfileForm.test.tsx  ProfileForm.tsx  RecommendationsPanel.test.tsx  RecommendationsPanel.tsx  RepoCard.tsx  ScoreBadge.tsx  ThemeProvider.tsx
src/components/Layout/: Sidebar.tsx  TopBar.tsx
src/domain/: types.ts
src/lib/: db.ts  draftPr.ts  github.ts  queries.test.ts  queries.ts  scoring.test.ts  scoring.ts  secrets.ts  tauri.ts
src/pages/: Dashboard.tsx  Explorer.tsx  IssueDetail.tsx  Preferences.tsx  Settings.tsx
src/services/: contribution.ts  database.ts  git.ts  github.ts  llm.ts  savedIssues.ts  scorer.ts  system.ts
src/store/: index.ts
src/theme/: index.ts
src/types/: index.ts
