[package]
name = "wisteria"
version = "0.1.0"
description = "Wisteria issue matcher"
authors = ["Codex"]
edition = "2021"

[lib]
name = "wisteria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
thiserror = "2"

[profile.dev.package.scrypt]
opt-level = 3

